[gd_scene load_steps=4 format=3 uid="uid://6tmkk28byx4r"]

[ext_resource type="Script" uid="uid://cn2vcsv6cgis1" path="res://player/player.gd" id="1_oul6g"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_oul6g")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oul6g")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Eyes" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/Eyes"]
fov = 90.0

[node name="StandupCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
